fixes for flag n visible

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+.GameContainer {
+    display:inline-block;
+    border: solid;
+}
+
 .rowCell {
     display: flex;
     flex-direction: row;
